3610/1928777_1935516/lab2/Lab2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Test.build.log
16:51:01 **** Auto Build of configuration Debug for project Test ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/bsp_init.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/bsp_init.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ucos_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/bsp_init.d" -MT"src/bsp_init.o" -o "src/bsp_init.o" "../src/bsp_init.c"
../src/bsp_init.c: In function 'initialize_axi_intc':
../src/bsp_init.c:23:6: warning: unused variable 'status' [-Wunused-variable]
  int status;
      ^~~~~~
../src/bsp_init.c: In function 'connect_fit_timer_1s_irq':
../src/bsp_init.c:63:6: warning: unused variable 'status' [-Wunused-variable]
  int status;
      ^~~~~~
../src/bsp_init.c: In function 'connect_fit_timer_3s_irq':
../src/bsp_init.c:73:6: warning: unused variable 'status' [-Wunused-variable]
  int status;
      ^~~~~~
../src/bsp_init.c: In function 'connect_gpio_irq':
../src/bsp_init.c:59:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
'Finished building: ../src/bsp_init.c'
' '
'Building file: ../src/simAvion.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/simAvion.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ucos_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/simAvion.d" -MT"src/simAvion.o" -o "src/simAvion.o" "../src/simAvion.c"
../src/simAvion.c: In function 'create_tasks':
../src/simAvion.c:89:16: warning: unused variable 'verificationTCB' [-Wunused-variable]
  static OS_TCB verificationTCB;
                ^~~~~~~~~~~~~~~
../src/simAvion.c:88:16: warning: unused variable 'statistiquesTCB' [-Wunused-variable]
  static OS_TCB statistiquesTCB;
                ^~~~~~~~~~~~~~~
../src/simAvion.c:87:16: warning: unused variable 'decollageTCB' [-Wunused-variable]
  static OS_TCB decollageTCB;
                ^~~~~~~~~~~~
../src/simAvion.c:86:16: warning: unused variable 'terminal1TCB' [-Wunused-variable]
  static OS_TCB terminal1TCB;
                ^~~~~~~~~~~~
../src/simAvion.c:85:16: warning: unused variable 'terminal0TCB' [-Wunused-variable]
  static OS_TCB terminal0TCB;
                ^~~~~~~~~~~~
../src/simAvion.c:84:16: warning: unused variable 'atterrissageTCB' [-Wunused-variable]
  static OS_TCB atterrissageTCB;
                ^~~~~~~~~~~~~~~
../src/simAvion.c:83:16: warning: unused variable 'generationTCB' [-Wunused-variable]
  static OS_TCB generationTCB;
                ^~~~~~~~~~~~~
../src/simAvion.c:80:17: warning: unused variable 'verificationStk' [-Wunused-variable]
  static CPU_STK verificationStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~
../src/simAvion.c:79:17: warning: unused variable 'statistiquesStk' [-Wunused-variable]
  static CPU_STK statistiquesStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~
../src/simAvion.c:78:17: warning: unused variable 'decollageStk' [-Wunused-variable]
  static CPU_STK decollageStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:77:17: warning: unused variable 'terminal1Stk' [-Wunused-variable]
  static CPU_STK terminal1Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:76:17: warning: unused variable 'terminal0Stk' [-Wunused-variable]
  static CPU_STK terminal0Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:75:17: warning: unused variable 'atterrissage0Stk' [-Wunused-variable]
  static CPU_STK atterrissage0Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~~
../src/simAvion.c:74:17: warning: unused variable 'generationStk' [-Wunused-variable]
  static CPU_STK generationStk[TASK_STK_SIZE]; //Stack of each task
                 ^~~~~~~~~~~~~
../src/simAvion.c: In function 'create_events':
../src/simAvion.c:100:9: warning: unused variable 'err' [-Wunused-variable]
  OS_ERR err;
         ^~~
../src/simAvion.c: In function 'generation':
../src/simAvion.c:116:9: warning: unused variable 'err' [-Wunused-variable]
  OS_ERR err;
         ^~~
../src/simAvion.c: In function 'atterrissage':
../src/simAvion.c:148:1: error: expected statement before ']' token
 ] xil_printf("Tache atterrissage lancee\n");
 ^
../src/simAvion.c:147:9: warning: unused variable 'avion' [-Wunused-variable]
  Avion* avion = NULL;
         ^~~~~
../src/simAvion.c:145:14: warning: unused variable 'msg_size' [-Wunused-variable]
  OS_MSG_SIZE msg_size;
              ^~~~~~~~
../src/simAvion.c:144:9: warning: unused variable 'ts' [-Wunused-variable]
  CPU_TS ts;
         ^~
../src/simAvion.c: At top level:
../src/simAvion.c:160:1: error: expected identifier or '(' before '}' token
 }
 ^
../src/simAvion.c: In function 'terminal':
../src/simAvion.c:167:20: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  int numTerminal = (int*)data;
                    ^
../src/simAvion.c:166:14: warning: unused variable 'msg_size' [-Wunused-variable]
  OS_MSG_SIZE msg_size;
              ^~~~~~~~
../src/simAvion.c:165:9: warning: unused variable 'ts' [-Wunused-variable]
  CPU_TS ts;
         ^~
../src/simAvion.c: In function 'decollage':
../src/simAvion.c:195:9: warning: unused variable 'avion' [-Wunused-variable]
  Avion* avion = NULL;
         ^~~~~
../src/simAvion.c:193:14: warning: unused variable 'msg_size' [-Wunused-variable]
  OS_MSG_SIZE msg_size;
              ^~~~~~~~
../src/simAvion.c:192:9: warning: unused variable 'ts' [-Wunused-variable]
  CPU_TS ts;
         ^~
../src/simAvion.c: In function 'statistiques':
../src/simAvion.c:210:9: warning: unused variable 'ts' [-Wunused-variable]
  CPU_TS ts;
         ^~
../src/simAvion.c:209:9: warning: unused variable 'err' [-Wunused-variable]
  OS_ERR err;
         ^~~
../src/simAvion.c: In function 'verification':
../src/simAvion.c:238:9: warning: unused variable 'ts' [-Wunused-variable]
  CPU_TS ts;
         ^~
../src/simAvion.c:237:9: warning: unused variable 'err' [-Wunused-variable]
  OS_ERR err;
         ^~~
At top level:
../src/simAvion.c:74:17: warning: 'generationStk' defined but not used [-Wunused-variable]
  static CPU_STK generationStk[TASK_STK_SIZE]; //Stack of each task
                 ^~~~~~~~~~~~~
../src/simAvion.c:75:17: warning: 'atterrissage0Stk' defined but not used [-Wunused-variable]
  static CPU_STK atterrissage0Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~~
../src/simAvion.c:76:17: warning: 'terminal0Stk' defined but not used [-Wunused-variable]
  static CPU_STK terminal0Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:77:17: warning: 'terminal1Stk' defined but not used [-Wunused-variable]
  static CPU_STK terminal1Stk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:78:17: warning: 'decollageStk' defined but not used [-Wunused-variable]
  static CPU_STK decollageStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~
../src/simAvion.c:79:17: warning: 'statistiquesStk' defined but not used [-Wunused-variable]
  static CPU_STK statistiquesStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~
../src/simAvion.c:80:17: warning: 'verificationStk' defined but not used [-Wunused-variable]
  static CPU_STK verificationStk[TASK_STK_SIZE];
                 ^~~~~~~~~~~~~~~
../src/simAvion.c:83:16: warning: 'generationTCB' defined but not used [-Wunused-variable]
  static OS_TCB generationTCB;
                ^~~~~~~~~~~~~
../src/simAvion.c:84:16: warning: 'atterrissageTCB' defined but not used [-Wunused-variable]
  static OS_TCB atterrissageTCB;
                ^~~~~~~~~~~~~~~
../src/simAvion.c:85:16: warning: 'terminal0TCB' defined but not used [-Wunused-variable]
  static OS_TCB terminal0TCB;
                ^~~~~~~~~~~~
../src/simAvion.c:86:16: warning: 'terminal1TCB' defined but not used [-Wunused-variable]
  static OS_TCB terminal1TCB;
                ^~~~~~~~~~~~
../src/simAvion.c:87:16: warning: 'decollageTCB' defined but not used [-Wunused-variable]
  static OS_TCB decollageTCB;
                ^~~~~~~~~~~~
../src/simAvion.c:88:16: warning: 'statistiquesTCB' defined but not used [-Wunused-variable]
  static OS_TCB statistiquesTCB;
                ^~~~~~~~~~~~~~~
../src/simAvion.c:89:16: warning: 'verificationTCB' defined but not used [-Wunused-variable]
  static OS_TCB verificationTCB;
                ^~~~~~~~~~~~~~~
make: *** [src/subdir.mk:26: src/simAvion.o] Error 1

16:51:02 Build Finished (took 672ms)

